[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "olympus-sdk"
version = "0.4.0"
description = "Official Python SDK for the Olympus Cloud Platform API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "NebusAI Engineering", email = "engineering@nebusai.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://nebusai.com"
Documentation = "https://docs.olympuscloud.ai/sdk/python"
Repository = "https://github.com/nebusai/olympus-cloud"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
